# One

./: .all-contributorsrc  .clang-format  .editorconfig  .gitignore  .markdown-link-check.json  .mergify.yml  .pre-commit-config.yaml  .prettierignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  MISSION_STATEMENT.md  Makefile  README.md  README_AR.md  README_DOCKER.md  README_ES.md  README_FA.md  README_FIL.md  README_FR.md  README_IT.md  README_JA.md  README_RU.md  README_TR.md  README_UK.md  SUMMARY.md  b.bat  docker-compose.yml  grammar.BNF  input.c  input.one  install_llvm.sh  mlc_config.json  nodemon.json  package-lock.json  package.json  pre-commit
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  join-care-team--c-programmer-or-embedded-programmer-.md  join-core-team.md  join-website-team--front-end-developer-or-designer-.md  join_core_team.md  join_doc_team.md  join_web_team.md
.github/linters/: .htmlhintrc  .markdown-lint.yml  .yaml-lint.yml  codespell.txt  mlc_config.json
.github/workflow/: lint.yml  linter.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  first-interaction.yml  labeler.yml  lint.yml  super-linter.yml  test-docker-compose.yml
.run/: one.run.xml
README/: README_DOCKER.md  README_FA.md  README_IT.md  README_RU.md  README_UK.md
docs/: README_AR.md  README_ES.md  README_FA.md  README_FIL.md  README_FR.md  README_IT.md  README_JA.md  README_KR.md  README_RU.md  README_TR.md  README_UK.md  index.html
example/: for-c.one  for-forever.one  hello-io.pne  hello.one  if.one  main.one  variable.one
js/src/generator/: vm.js
langs/: READMD_KR.md  README_AR.md  README_ES.md  README_FA.md  README_FIL.md  README_FR.md  README_IT.md  README_JA.md  README_RU.md  README_TR.md  README_UK.md
log/: 2018-12-31-15:10  2018-12-31-15:11  2018-12-31-15:12  2018-12-31-15:13  2018-12-31-15:14  2018-12-31-15:15  2018-12-31-15:16
scripts/ci/pre-commit/: sort-and-uniquify-codespell-wordlist.sh
src/: arg.c  arg.h  args.c  args.h  argument.c  argument.h  array.c  array.h  arraylist.c  arraylist.h  ast.c  ast.h  build.bat  build.sh  cli.c  cli.h  compile.c  compile.h  error.c  error.h  file.c  file.h  generator.c  generator.h  index.ts  input.one  interpret.c  interpret.h  intput.one  io.c  io.h  lexer.c  lexer.h  lexer.test.c  main.c  main.js  one.c  one.h  one.js  out.c  (+24 more)
src-c/builtins/: file.h
src-c/generator/: main.c
src-c/lexer/: main.c  token.h
src-c/parser/: ast.c
src-old/builtins/: error.h  file.c  file.h  string.h
src-old/parser/: parser_token.h
src-old/parser/lexer/: lexer.c  lexer.h  token.c
src/ast/: ast  ast-structure.txt  ast.c  ast.h  build.sh  main.c
src/built-in/: file.c
src/builtins/: array.c  array.h  error.c  error.h  file.c  file.h  io.c  io.h  str.c  str.h  string.c  string.h
src/cli/: index.js
src/cli/commands/: version.js
src/cli/io/: file.js  index.js
src/generator/: b.bat  generator.c  generator.ts  index.js  statement.js
src/generator/commands/: expression.js  for.js  function.js  if.js  print.js  variable-define.js  while.js
src/lexer/: b.bat  build.sh  i  index.ts  lexer  lexer.c  lexer.h  lexer.js  lexer.ts  main.c  o.tks  source.c  source.h  test.sh  token.c  token.h  token.js  token.ts  tokens.h
src/lexer/tokenizer/: token.c  token.h  tokenizer.c  tokenizer.h
src/parser/: ast.c  ast.h  ast.ts  b.bat  build.sh  main.c  parser  parser.c  parser.h  parser.ts  parser_token.c  parser_token.h  token_stack.c
src/parser/lexer/: build.sh  lexer.c  lexer.h  main.c  test.sh  token.c  token.h
src/scanner/: grammar.js  parser.js
src/stages/generator/: CMakeLists.txt  generator.c  generator.h  main.c
src/stages/lexer/: CMakeCache.txt  CMakeLists.txt  lexer.c  lexer.h  main.c  one_lexer.run.xml  token.c  token.h  token_type.h
src/stages/parser/: CMakeLists.txt  ast.h  main.c  parser.c  parser.h
src/tokenizer/: a.out  main.c  token.c  token.h  tokenizer.c  tokenizer.c.h  tokenizer.h
src/utilities/: io.c  io.h
src/utility/: array.c  array.h  cli.c  cli.h  file.c  file.h
src/utils/: array.c  array.h  file.c  file.h
test/: CMakeLists.txt  One  a.out  argument.test.c  ast.test.c  build.sh  file.c  lexer  lexer.test.c  parser.test.c  test.h
tests/: 1-hello-world.et  10-file-copy.et  10-file-set.et  10-hello-world-tiny.et  13-inline-assembly-exit-i386.et  16-operator-test.et  16-print-test.et  17-operator-test.et  18-factorial.et  18-operator-test.et  19-factorial.et  2-main-return.et  20-factorial-loop.et  21-loop-for.et  22-loop-repeat.et  23-loop-while.et  24-if-else.et  25-if-else-odd-even.et  26-loop-count-number.et  27-if-which-largest.et  28-if-else-which-largest.et  29-sort-bubble.et  3-function-define.et  30-sort-shell.et  31-sort-char.et  32-web-architecture.et  33-web-cgi.et  34-architecture.et  34-web-architecture.et  35-math-sin.et  38-string-upper.et  4-print.et  40-architecture-sample.et  42-architecture-sample.et  43-architecture-sample.et  44-math-cot.et  48-hello.et  48-tiny-hello.et  5-comment.et  50-hello.et  (+22 more)
tmp/c/: Makefile  input.one
tmp/c-new/: CMakeLists.txt  input.one  lexer.c  one.c  parser.h  token.h
tmp/c-new/docs/: index.html
tmp/c-new/src/: arg.c  arg.h  array.c  array.h  ast.c  ast.h  compile.c  compile.h  error.c  error.h  file.c  file.h  lexer.c  lexer.h  lexer.test.c  one.c  one.h  parser.c  parser.h  token.c  token.h  tree.c  tree.h  vm.c  vm.h
tmp/c-new/tests/: 10-file-copy.et  14-inline-assembly-exit-x86_64.et  15-expression-test.et  18-operator-test.et  21-loop-for.et  28-if-else-which-largest.et  3-function-define.et  30-sort-shell.et  33-web-cgi.et  36-math-cos.et  37-math-tan.et  48-hello.et  (+19 more)
tmp/c-new2/: argument.c  array.h  ast.c  ast.h  file.c  file.h  generator.c  interpret.c  lexer.c  one.c  parser.c  parser.h  repl.c  token.c  token.h  tree.h  value.c  value.h
tmp/cpp-llvm/: toy.cpp  toy.hh
tmp/js/: input.ast  input.c  package-lock.json  package.json
unit-tests/: arg-tests.c  lexer.test.c
unit-tests/unity/: unity.c  unity.h
(+70 files in other folders)
